syntax = "proto3";
package com.footyandsweep;

enum SweepstakeStatus {
  OPEN = 0;
  ALLOCATED = 1;
  CLOSED = 2;
}

enum SweepstakeTypeCommon {
  Correct_Score_FT = 0;
  Correct_Score_HT = 1;
}

message Sweepstake {
  string id = 1;
  string name = 2;
  string joinCode = 3;
  SweepstakeStatus status = 4;
  bool isPrivate = 5;
  string ownerId = 6;
  string sweepstakeEventId = 7;
  SweepstakeTypeCommon sweepstakeType = 8;
  int32 sweepstakeListSize = 10;
  int32 minimumPlayers = 11;
  int32 maximumPlayerTickets = 12;
  BigDecimal stake = 13;
  int32 totalNumberOfTickets = 14;
}

message BigDecimal {
  int32 scale = 1;
  BigInteger int_val = 2;
}

message BigInteger {
  bytes value = 1;
}

message JoinCode {
  string joinCode = 1;
}

message Id {
  string id = 1;
}

message Map {
  map<int64, string> pairs = 1;
}

message SweepstakeList {
  repeated Sweepstake sweepstakes = 1;
}

service SweepstakeService {
  rpc findSweepstakeByJoinCode(JoinCode) returns (Sweepstake);
  rpc findSweepstakeByFootballMatchId(Id) returns (SweepstakeList);
  rpc findSweepstakeById(Id) returns (Sweepstake);
  rpc getResultHelperMap(Sweepstake) returns (Map);
  rpc requestNewSweepstake(Sweepstake) returns (stream Sweepstake);
}
